<resources>
    <string name="app_name">MiniGram</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="caption">Caption</string>
    <string name="upload">Upload</string>
    <string name="e_mail_address">E-Mail Address</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="title_activity_posts">PostsActivity</string>
</resources>
